<resources>
    <string name="app_name">Link Five Dots</string>
    <string name="language">English</string>
    <string name="greetings">Hi, %1$s!</string>
    <string name="android">Android</string>
    <string name="how_to_title">How To Play</string>
    <string name="how_to_text">
        \t
        Be the first to link five dots in a straight line horizontally, vertically or diagonally.
        Android plays blue dots, you play red dots. Red and blue dots are put in turn on the line
        intersections. The first move is yours.
        \n\n\t
        Drag the screen to move the grid.
        \n\t
        Scale the screen to enlarge or reduce grid size.
        \n\t
        Use menu to restart the game, undo last move, see game scores or see how to play.
        \n\t
        Press \"Search\" button to hide/show arrows around the last move dot.</string>
    <string name="scores_title">Scores</string>
    <string name="scores_no_internet">No internet access</string>
    <string name="scores_number">#</string>
    <string name="scores_name">Name</string>
    <string name="scores_moves">Number of moves</string>
    <string name="scores_status">Status</string>
    <string name="scores_won">won</string>
    <string name="scores_lost">lost</string>
    <string name="end_win">You’ve won!</string>
    <string name="end_lose">You’ve failed!</string>
    <string name="end_new_game">New</string>
    <string name="end_undo">Undo</string>
    <string name="end_move">%1$d moves done for %2$d s.</string>
    <string name="seed_hint" translatable="false">45664</string>
    <string name="scores_time">Time</string>
    <string name="end_publish">Publish</string>
    <string name="scores_loading">Loading…</string>
    <string name="menu_single_player">Single Player</string>
    <string name="menu_multi_player">Multiplayer</string>
    <string name="two_players">Two players</string>
    <string name="menu_local_network">Local Area Network</string>
    <string name="menu_online_game">Online</string>
    <string name="settings_vibration">Vibration</string>
    <string name="settings_night_mode">Night mode</string>
    <string name="settings_auto">Auto</string>
    <string name="settings_system">System</string>
    <string name="settings_reset">Erase everything</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="btn_github" translatable="false">GitHub</string>
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="create">Create</string>
    <string name="device_info_default">Unknown</string>
    <string name="switch_on_text">On</string>
    <string name="switch_off_text">Off</string>
    <string name="bluetooth_not_discoverable">Make device discoverable</string>
    <string name="bluetooth_is_discoverable">Visible to all nearby Bluetooth devices (%1$s)</string>
    <string name="bluetooth_only_visible_to_paired_devices">Only visible to paired devices</string>
    <string name="bluetooth_is_disconnect_question">"Disconnect \u0022%1$s\u0022?"</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_connecting">Connecting\u2026</string>
    <string name="bluetooth_no_devices_found">No nearby Bluetooth devices were found.</string>
    <string name="device_picker">Choose Bluetooth device</string>
    <string name="bluetooth_connection_dialog_text">"Do you want to connect to \u0022%1$s\u0022?"</string>
    <string name="cancel">Cancel</string>
    <string name="okay">OK</string>
    <string name="settings_label">Settings</string>
    <string name="bluetooth_settings">Bluetooth</string>
    <string name="bluetooth_connecting_error_message">Couldn\'t connect to \u0022%1$s\u0022.</string>
    <string name="bluetooth_search_for_devices">Refresh</string>
    <string name="bluetooth_preference_paired_devices">Paired devices</string>
    <string name="bluetooth_preference_found_devices">Available devices</string>
    <string name="apn_not_set">Not set</string>
    <string name="apn_name">Name:</string>
    <string name="apn_user">Username</string>
    <string name="application_info_label">App info</string>
    <string name="master_clear_progress_text">Please wait…</string>
    <string name="version_text">version %1$s</string>
    <string name="device_feedback">Send feedback</string>
    <string name="phone_language">Language</string>
    <string name="share">Share</string>
    <string name="vpn_no_network">There is no network connection. Please try again later.</string>
    <string name="search_menu">Search</string>
    <string name="bt_message_your_turn">Your move, put a dot…</string>
    <string name="bt_message_opponents_turn">Opponent\'s move, wait…</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="next_turn_">Next turn</string>
    <string name="welcome">Welcome to the Skeleton, the game!  This is network-only, so you&amp;apos;ll need to log in to play!</string>
    <string name="sign_out">Sign Out</string>
    <string name="match_instructions">Type in a new word for the data in this game, then hit done.</string>
    <string name="quick_match">Quick match</string>
    <string name="continue_str">Continue</string>
    <string name="guesser_prompt">This has not been set.</string>
    <string name="clear">Clear</string>
    <string name="done">Done</string>
    <string name="leave">Leave</string>
    <string name="finish">Finish</string>
    <string name="welcome_to_our_skeleton_app_">Welcome to our skeleton app!</string>
    <string name="check_games">Check games</string>
    <string name="start_match">Start Match</string>
    <string name="turn_counter">Turn counter</string>
    <string name="signin_other_error">There was an issue with sign in.  Please try again later.</string>
    <string name="status_multiplayer_error_not_trusted_tester">Anyone you invite must be a trusted tester</string>
    <string name="match_error_already_rematched">This rematch has already been started!</string>
    <string name="client_reconnect_required">Games client reconnect required</string>
    <string name="network_error_operation_failed">Network error: Operation failed</string>
    <string name="internal_error">Internal error</string>
    <string name="unexpected_status">Unexpected status</string>
    <string name="match_error_inactive_match">This match is inactive.</string>
    <string name="nsd_error" translatable="false">DNS-Based Service Discovery is only available since Android 4.1.</string>
    <string name="bluetooth_error" translatable="false">Bluetooth is not supported by your device.</string>
    <string name="sign_in_failed">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed">License check failed.</string>
    <string name="unknown_error">Unknown error.</string>
    <string name="signing_out">Signing out</string>
    <string name="game_blurb">A sample game that tests your ability to click a button. Can you click faster than your friends? Only one way to find out! To play this game with friends, you must sign in with Google.</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite players</string>
    <string name="show_invitations">Show invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="dismiss">Dismiss</string>
    <string name="your_score">Your score:</string>
    <string name="error">Error</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
</resources>