<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paper_tiled"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/bt_text_size"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/bt_text_size"
        android:text="@string/version_text"
        android:textColor="@color/black"/>

    <com.google.android.gms.plus.PlusOneButton
        xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"
        android:id="@+id/plus_one_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/plus_one_button_margin"
        android:layout_marginBottom="@dimen/plus_one_button_margin"
        plus:size="tall"
        plus:annotation="inline" />

    <Button
        android:id="@+id/rate_this_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_this_app"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/btn_text_size"
        android:background="@drawable/btn_selector"/>

    <Button
        android:id="@+id/send_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_feedback"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/btn_text_size"
        android:background="@drawable/btn_selector"/>

    <Button
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/btn_text_size"
        android:background="@drawable/btn_selector"/>

</LinearLayout>