<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF000000"
    android:orientation="vertical">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/scores_number"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#FFFF00" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:text="@string/scores_name"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#FFFF00" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/scores_moves"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#FFFF00" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/scores_time"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#FFFF00" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:text="@string/scores_status"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="#FFFF00" />
                </LinearLayout>

                <TableLayout
                    android:id="@+id/TableLayout111"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                </TableLayout>
            </LinearLayout>
        </ScrollView>

    </android.support.v4.widget.SwipeRefreshLayout>

</LinearLayout>