<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <!-- SIGN-IN SCREEN -->
    <FrameLayout
        android:id="@+id/screen_sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/paper_tiled"
        android:visibility="gone">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/button_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onClick"
            android:padding="30dp" />

    </FrameLayout>


    <!-- MAIN SCREEN -->
    <LinearLayout
        android:id="@+id/screen_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/paper_tiled"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        android:visibility="gone">

        <Button
            android:id="@+id/button_quick_game"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_shuffle_black_48dp"
            android:drawableStart="@drawable/ic_shuffle_black_48dp"
            android:onClick="onClick"
            android:text="@string/quick_game" />

        <Button
            android:id="@+id/button_invite_players"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_person_add_black_48dp"
            android:drawableStart="@drawable/ic_person_add_black_48dp"
            android:onClick="onClick"
            android:text="@string/invite_players" />

        <Button
            android:id="@+id/button_show_invitations"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email_black_48dp"
            android:drawableStart="@drawable/ic_email_black_48dp"
            android:onClick="onClick"
            android:text="@string/show_invitations" />

    </LinearLayout>

    <!-- "PLEASE WAIT" SCREEN -->
    <LinearLayout
        android:id="@+id/screen_wait"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/paper_tiled"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        android:visibility="visible">

        <TextView
            style="@style/Blurb"
            android:text="@string/master_clear_progress_text" />

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <include
        android:id="@+id/screen_game_board"
        layout="@layout/game_board"
        android:visibility="invisible" />

</FrameLayout>